--- a/Academy/Compliance/ISO27001.md
+++ b/Academy/Compliance/ISO27001.md
@@ -1,5 +1,100 @@
 # Not The Hidden Wiki
 
+ISO27001 is about Risk in Information System.
+
+Reference sources
+• ISO/IEC 27000 - overview and glossary for the ISO27k 
+• ISO/IEC 27001 - formal information security management system
+specification
+• ISO/IEC 27002 - a page explaining each of the 93 controls in ISO/IEC 27001
+Annex A
+• ISO/IEC 27003 - explains the formal requirements in ISO/IEC 27001 (2013
+version – update in progress)
+• ISO/IEC 27004 - how to design and use information security metrics
+• ISO/IEC 27005 - techniques to analyse/assess & treat information risks
+• ISO SME information security guide – a guide for medium-sized
+organisations to adopt ISO/IEC 27001 for US$50
+• Pragmatic ISMS implementation guide - explains ISO/IEC 27001 - free!
+• ISO 31000 - risk management, in general
+• ISO/TS 31050 - improving organisational resilience, extending ISO 31000
+• NIST Cyber Security Framework small business quick start guide - free!
+• ISO27k Forum, ISO27k FAQ & ISO27k Toolkit - free, all free!
+• ISO 27001 ISMS Handbook: Implementing and auditing an Information
+Security Management System in small and medium-sized businesses by
+Cees van der Wens (paperback ~US$40 from Amazon)
+• The ISO website is the official source of information on ISO and ISO/IEC
+standards
+• The ISO27001security website describes each of the ISO/IEC 27000-series
+standards, both published and in preparation, and offers free resources
+for implementers including this guideline and the ISO27k Forum
+
+Incidents (happenings, events, accidents, attacks, crises …) involving information typically cause or involve a loss of or reduction in its:
+• Confidentiality – unauthorised/inappropriate disclosure or revelation or exposure of sensitive information;
+• Integrity – incomplete, inaccurate or out-of-date information; and/or
+• Availability – information cannot be accessed and used for its intended purposes, for a while or indefinitely.
+Those are the primary effects. However, incidents can also have secondary adverse effects such as a loss of or reduction in:
+• Compliance with legal, regulatory or contractual obligations – increasing the possibility of penalties such as fines and additional supervision;
+• Conformity with and satisfaction of personal, corporate or societal requirements, including ethical expectations;
+• Access to information e.g. it may take longer or be more difficult to acquire sufficient, appropriate data for various purposes;
+• Information management capabilities e.g. the legitimate owners of information may be unable to secure it, restrict/permit access to it, determine who can
+use and how and when etc., or may feel it is not even worth attempting to do so due to losing confidence in security;
+• Quality e.g. AI systems may hallucinate, offering factually inaccurate but plausible information, or advisors may give misleading, inappropriate, inaccurate or
+incomplete advice4;
+• Flexibility e.g. it is costlier, harder, more complicated and takes longer to plan, execute and test/validate/accredit changes to a secure IT system or process;
+• Reliability and trustworthiness e.g. it may be unclear or uncertain whether information is sufficiently correct, complete, current and controlled following an
+incident, particularly if the exact nature and sequence of events cannot be ascertained;
+• Understanding of information e.g. due to translation or transcription errors, inadequately-explained or ineptly-expressed concepts, cultural and
+comprehension issues;
+• Utility e.g. information that is no longer considered sufficiently trustworthy, complete, accurate and up-to-date for its intended purposes may be unusable
+Furthermore, incidents may lead to an increase in:
+• Information processing, communication and storage – aside from overheads caused by the operation of security controls, security logs typically store
+pertinent information for later analysis, and some incidents involve the deliberate or accidental accumulation of ‘junk’ data obscuring events;
+• Delays – slowing down dependent decisions, activities or processes while necessary information is obtained and verified;
+• Complexity – increasing controls for a system or process makes it more complicated, adding ‘moving parts’ that all need to function properly and interoperate
+smoothly; and
+• Uncertainties and risks of further incidents – once an incident such as a ransomware attack or privacy breach occurs, that may increase the probability and/or
+impacts of further incidents.
+Ultimately, incidents destroy value. As a consequence of various incidents, information is worth less to its legitimate owners and users, and perhaps more to
+adversaries or competitors. Furthermore, incidents drive up losses and costs such as:
+• The direct loss of asset value e.g. theft and misuse of intellectual property or trade secrets, or reputational damage and brand devaluation;
+• Consequential costs due to disruption or prevention of downstream business activities e.g. urgent revision or suspension of commercial plans to launch new
+products;
+• Costs associated with managing, investigating and resolving incidents e.g. attempting to resume control and regain customer trust, loyalty and custom;
+• The full lifecycle costs of various controls – from specification and design through to their operation, management and maintenance;
+• Opportunity costs – other potentially beneficial investments or activities are delayed, curtailed or prevented due to the lack of funds and other finite resources,
+including management and staff attention and energy; and
+• External impacts e.g. privacy breaches adversely affect the lives of the individuals whose personal information is compromised.
+In the business context, it makes no sense to spend a fortune on reducing trivial incidents. Conversely, targeted investment to avoid, prevent or contain the
+damaging effects of significant risks is entirely justified, even necessary. Therefore, we really need to analyse and quantify risk in order to invest appropriately,
+especially given limited/finite resources.
+Incidents fall on a notional impact or damage scale from zero (having absolutely no adverse effect on the organisation at whatsoever) to catastrophic, maybe even
+existential. Incidents also vary in likelihood from never or extremely rare to commonplace or continuous. Risk is a combination of both impact and likelihood.
+
+Decide on risk treatments
+There are four generally-accepted ways of treating risks:
+1. Risk avoidance - stopping or not starting particularly risky activities at all. This is seldom appropriate because we normally only do things that have some
+purpose and value, so if we don’t do them to avoid the associated risk, we lose that value. However, we do sometimes have the option of not taking on
+significant risks e.g. by consciously and deliberately not releasing sensitive, valuable information to untrustworthy third parties, or pulling out of business
+arrangements that have become unduly threatening to our interests. 
+
+2. Risk reduction through security controls - most risks are ‘mitigated’ in some fashion using technological, procedural or physical controls (also known as
+measures, countermeasures, safeguards etc.). Most controls have a specific purpose (e.g. antivirus controls attempt to spot and block malware infections)
+while some others are general-purpose (e.g. resilience and backups). Multi-purpose controls (e.g. policies and procedures) can address several risks at
+once, and as such are often more valuable but less effective than single-purpose controls.
+
+3. Sharing risks with third parties - some risks can be shared by insurers, customers, owners, communities etc., who undertake to deal with them or accept
+the consequences (defined liabilities). Website privacy policies are an example: visitors who provide their contact details or other personal information
+through the website share some of the risk of privacy breaches with the SME on the understanding that specific privacy controls (as laid out in the policies)
+are in place. Insurance is another example: the insurer undertakes to compensate the insured if specific situations occur, provided the insured has taken
+‘reasonable’ (and often specified) steps to reduce the risk. Risks can be shared internally too. SMEs may opt to hold the IT department accountable for all
+IT risks rather than the individual departments - on the proviso that whoever is accountable has the ability to make key decisions about the risks, and has
+control over sufficient resources to.
+
+4. Risk acceptance - all the remaining risks are said to be accepted, whether deliberately and expressly, or not. We accept risks that were only partially
+treated by other means (e.g. where the controls are not entirely effective and reliable, or where situations we intended to avoid occur anyway, or where
+our attempted quantification was inaccurate, perhaps because things changed unexpectedly) plus risks that were untreated (e.g. risks we didn’t even
+identify as such, due to flaws in that part of the risk analysis process). 
+
 ## Links related to ISO 27001
 -----
 
