--- a/Academy/Compliance/ISO27001.md
+++ b/Academy/Compliance/ISO27001.md
@@ -2,31 +2,60 @@
 
 ISO27001 is about Risk in Information System.
 
+ISO - International Organisation for Standardization
+
+ISO is an independent, non-governmental, global organisation that develops and publishes international standards covering various aspects of technology,
+engineering, industry and business. These standards ensure consistency, safety, interoperability and quality in products, services and management systems across
+the globe - thousands of ISO standards touching everyday aspects of modern life.
+ISO publishes numerous standards concerning information security, business continuity, risk management and related areas, some developed in conjunction with
+the International Electrotechnical Commission, Cloud Security Alliance, ISACA and others:
+
+ISO/IEC 27001:2022 - defines requirements for scoping, planning, implementing, maintaining and continuously improving an Information Security Management
+System (ISMS). The standard offers a set of 93 generic information security controls to be used as a checklist, ensuring that nothing important gets
+forgotten. Although it is intended to apply to all organisations, in practice ISO/IEC 27001 is often seen as overkill for SMEs … but the fundamental principles (such
+as the systematic risk-based approach) are sound and proven, underpinning adaptive SME security.
+
+ISO/IEC 27001:2022 - Information security management systems - A practical guide for SMEs is a new (2024) handbook from ISO, supporting SMEs developing and
+implementing ISO/IEC 27001 information security management systems.
+
+ISO 22301:2019 - similarly defines requirements for planning, implementing, maintaining and continuously improving a Business Continuity Management System
+(BCMS). The purpose of a BCMS is to identify risks, prepare for emergencies, continue essential business activities if possible, and if not recover as soon as possible
+from disruptive events to the organisation.
+
+ISO 31000:2018 - a framework of generic processes for managing all kinds of risks affecting your organisation, systematically ag
+
+
 Reference sources
-• ISO/IEC 27000 - overview and glossary for the ISO27k 
-• ISO/IEC 27001 - formal information security management system
+• ISO/IEC 27000 - overview and glossary for the ISO27k  [link](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
+
+• ISO/IEC 27001 - formal information security management system [link](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
 specification
-• ISO/IEC 27002 - a page explaining each of the 93 controls in ISO/IEC 27001
+
+• ISO/IEC 27002 - a page explaining each of the 93 controls in ISO/IEC 27001 [link](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
 Annex A
-• ISO/IEC 27003 - explains the formal requirements in ISO/IEC 27001 (2013
+
+• ISO/IEC 27003 - explains the formal requirements in ISO/IEC 27001 (2013 [link](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
 version – update in progress)
-• ISO/IEC 27004 - how to design and use information security metrics
-• ISO/IEC 27005 - techniques to analyse/assess & treat information risks
-• ISO SME information security guide – a guide for medium-sized
-organisations to adopt ISO/IEC 27001 for US$50
+
+• ISO/IEC 27004 - how to design and use information security metrics [link](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
+
+• ISO/IEC 27005 - techniques to analyse/assess & treat information risks [link](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
+
 • Pragmatic ISMS implementation guide - explains ISO/IEC 27001 - free!
-• ISO 31000 - risk management, in general
-• ISO/TS 31050 - improving organisational resilience, extending ISO 31000
-• NIST Cyber Security Framework small business quick start guide - free!
-• ISO27k Forum, ISO27k FAQ & ISO27k Toolkit - free, all free!
-• ISO 27001 ISMS Handbook: Implementing and auditing an Information
+
+• ISO 31000 - risk management, in general [link](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
+
+• ISO/TS 31050 - improving organisational resilience, extending ISO 31000 [link](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
+
+• NIST Cyber Security Framework small business quick start guide - free! [link](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
+
+• ISO27k Forum, ISO27k FAQ & ISO27k Toolkit - free, all free! [link](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
+
+• ISO 27001 ISMS Handbook: Implementing and auditing an Information [link](  )
 Security Management System in small and medium-sized businesses by
 Cees van der Wens (paperback ~US$40 from Amazon)
-• The ISO website is the official source of information on ISO and ISO/IEC
-standards
-• The ISO27001security website describes each of the ISO/IEC 27000-series
-standards, both published and in preparation, and offers free resources
-for implementers including this guideline and the ISO27k Forum
+
+Glossary :
 
 Incidents (happenings, events, accidents, attacks, crises …) involving information typically cause or involve a loss of or reduction in its:
 • Confidentiality – unauthorised/inappropriate disclosure or revelation or exposure of sensitive information;
