--- a/Academy/Compliance/ISO27001.md
+++ b/Academy/Compliance/ISO27001.md
@@ -32,39 +32,80 @@ ISO publishes numerous standards concerning information security, business conti
 - [ISO 27001 ISMS Handbook: Implementing and auditing an Information Security Management System in small and medium-sized businesses by Cees van der Wens (paperback ~US$40 from Amazon)](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
 
 ## Glossary
+# Not The Hidden Wiki
 
-• Assurance: monitoring, checks, reviews, and audits to increase confidence in the arrangements.
-• Authentication: confirming that something is authentic, e.g., true, honest, real.
-• Awareness & training: complementary techniques to help people understand and accept things, teaching and motivating them to become more competent and learn new skills.
-• Compliance & conformance: doing what is formally required and what is informally expected or anticipated, respectively.
-• Control: a means to prevent inappropriate or unwanted activities, actions, and outcomes, while permitting or facilitating the converse.
-• Cyber: generally refers to IT, especially systems connected to or accessible from the Internet.
-• Governance: arrangements to direct and control the organisation’s activities.
-• Incident: an event that disrupts normal operations or poses a threat to the security, integrity, or availability of information.
-• Policy: a set of objectives and rules specified by management.
-• Risk: the probability that bad things might happen, coupled with the consequences if they do. Or: “The effect of uncertainty on objectives” (ISO 31000).
-• Security: the probability that incidents will not happen, or if they do, they will not be bad.
-• Threat: a potential cause of an unwanted incident, which may result in harm to a system or organisation.
-• Vulnerability: a weakness that can be exploited by a threat to gain unauthorised access to or otherwise harm a system or organisation.
-• Resilience: the ability to withstand or recover quickly from difficult conditions, including incidents and disruptions.
-• Incident Response: the process of handling and managing the aftermath of a security breach or cyberattack to limit damage and reduce recovery time and costs.
-• Mitigation: actions taken to reduce the severity or impact of an incident or threat.
-• Contingency Planning: preparing for unexpected events by outlining actions to take if certain risks materialize.
-• Asset Management: the systematic process of developing, operating, maintaining, and disposing of assets in the most cost-effective manner.
-• Confidentiality: ensuring that information is not disclosed to unauthorized individuals, entities, or processes.
-• Integrity: maintaining the accuracy and completeness of information and processing methods.
-• Availability: ensuring that information and necessary resources are accessible to authorized users when needed.
-• Business Continuity: the planning and preparation to ensure that an organisation can continue to operate in case of serious incidents or disasters.
-• Disaster Recovery: a subset of business continuity planning focused on the recovery of IT systems and data after a catastrophic event.
-• Encryption: the process of converting information or data into a code to prevent unauthorized access.
-• Access Control: mechanisms to ensure that resources are only accessed by authorized users in authorized ways.
+## ISO27001 and Risk Management in Information Systems
 
+ISO27001 is about Risk in Information Systems.
+
+### ISO - International Organisation for Standardization
+
+ISO is an independent, non-governmental, global organisation that develops and publishes international standards covering various aspects of technology, engineering, industry, and business. These standards ensure consistency, safety, interoperability, and quality in products, services, and management systems across the globe - thousands of ISO standards touching everyday aspects of modern life.
+
+ISO publishes numerous standards concerning information security, business continuity, risk management, and related areas, some developed in conjunction with the International Electrotechnical Commission, Cloud Security Alliance, ISACA, and others:
+
+- **ISO/IEC 27001:2022** - Defines requirements for scoping, planning, implementing, maintaining, and continuously improving an Information Security Management System (ISMS). The standard offers a set of 93 generic information security controls to be used as a checklist, ensuring that nothing important gets forgotten. Although it is intended to apply to all organisations, in practice, ISO/IEC 27001 is often seen as overkill for SMEs. However, the fundamental principles (such as the systematic risk-based approach) are sound and proven, underpinning adaptive SME security.
+  
+- **ISO/IEC 27001:2022 - Information Security Management Systems - A Practical Guide for SMEs** is a new (2024) handbook from ISO, supporting SMEs in developing and implementing ISO/IEC 27001 information security management systems.
+
+- **ISO 22301:2019** - Similarly defines requirements for planning, implementing, maintaining, and continuously improving a Business Continuity Management System (BCMS). The purpose of a BCMS is to identify risks, prepare for emergencies, continue essential business activities if possible, and if not, recover as soon as possible from disruptive events to the organisation.
+
+- **ISO 31000:2018** - A framework of generic processes for managing all kinds of risks affecting your organisation systematically.
+
+### Reference Sources
+
+- [ISO/IEC 27000 - overview and glossary for the ISO27k](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
+- [ISO/IEC 27001 - formal information security management system specification](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
+- [ISO/IEC 27002 - a page explaining each of the 93 controls in ISO/IEC 27001 Annex A](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
+- [ISO/IEC 27003 - explains the formal requirements in ISO/IEC 27001 (2013 version – update in progress)](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
+- [ISO/IEC 27004 - how to design and use information security metrics](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
+- [ISO/IEC 27005 - techniques to analyse/assess & treat information risks](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
+- [Pragmatic ISMS implementation guide - explains ISO/IEC 27001 - free!](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
+- [ISO 31000 - risk management, in general](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
+- [ISO/TS 31050 - improving organisational resilience, extending ISO 31000](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
+- [NIST Cyber Security Framework small business quick start guide - free!](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
+- [ISO27k Forum, ISO27k FAQ & ISO27k Toolkit - free, all free!](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
+- [ISO 27001 ISMS Handbook: Implementing and auditing an Information Security Management System in small and medium-sized businesses by Cees van der Wens (paperback ~US$40 from Amazon)](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
+
+---
+
+## Glossary
+
+- ⚙️ **Assurance:** Monitoring, checks, reviews, and audits to increase confidence in the arrangements.
+- 🔒 **Authentication:** Confirming that something is authentic, e.g., true, honest, real.
+- 📚 **Awareness & Training:** Complementary techniques to help people understand and accept things, teaching and motivating them to become more competent and learn new skills.
+- ✅ **Compliance & Conformance:** Doing what is formally required and what is informally expected or anticipated, respectively.
+- 🛡️ **Control:** A means to prevent inappropriate or unwanted activities, actions, and outcomes, while permitting or facilitating the converse.
+- 🌐 **Cyber:** Generally refers to IT, especially systems connected to or accessible from the Internet.
+- 🏛️ **Governance:** Arrangements to direct and control the organisation’s activities.
+- 🚨 **Incident:** An event that disrupts normal operations or poses a threat to the security, integrity, or availability of information.
+- 📜 **Policy:** A set of objectives and rules specified by management.
+- ⚖️ **Risk:** The probability that bad things might happen, coupled with the consequences if they do. Or: “The effect of uncertainty on objectives” (ISO 31000).
+- 🔐 **Security:** The probability that incidents will not happen, or if they do, they will not be bad.
+- ⚠️ **Threat:** A potential cause of an unwanted incident, which may result in harm to a system or organisation.
+- 🛠️ **Vulnerability:** A weakness that can be exploited by a threat to gain unauthorized access to or otherwise harm a system or organisation.
+- 🌳 **Resilience:** The ability to withstand or recover quickly from difficult conditions, including incidents and disruptions.
+- 🛡️ **Incident Response:** The process of handling and managing the aftermath of a security breach or cyberattack to limit damage and reduce recovery time and costs.
+- 🛑 **Mitigation:** Actions taken to reduce the severity or impact of an incident or threat.
+- 📋 **Contingency Planning:** Preparing for unexpected events by outlining actions to take if certain risks materialize.
+- 📦 **Asset Management:** The systematic process of developing, operating, maintaining, and disposing of assets in the most cost-effective manner.
+- 🔏 **Confidentiality:** Ensuring that information is not disclosed to unauthorized individuals, entities, or processes.
+- 📝 **Integrity:** Maintaining the accuracy and completeness of information and processing methods.
+- 📂 **Availability:** Ensuring that information and necessary resources are accessible to authorized users when needed.
+- 🔄 **Business Continuity:** The planning and preparation to ensure that an organisation can continue to operate in case of serious incidents or disasters.
+- 🚀 **Disaster Recovery:** A subset of business continuity planning focused on the recovery of IT systems and data after a catastrophic event.
+- 🔐 **Encryption:** The process of converting information or data into a code to prevent unauthorized access.
+- 🛂 **Access Control:** Mechanisms to ensure that resources are only accessed by authorized users in authorized ways.
+
+---
+
+## Impact of Incidents on Information
 
 **Incidents** (happenings, events, accidents, attacks, crises, etc.) involving information typically cause or involve a loss of or reduction in its:
 
-- **Confidentiality** – unauthorised/inappropriate disclosure or revelation or exposure of sensitive information;
-- **Integrity** – incomplete, inaccurate, or out-of-date information; and/or
-- **Availability** – information cannot be accessed and used for its intended purposes, for a while or indefinitely.
+- **Confidentiality** – Unauthorised/inappropriate disclosure or revelation or exposure of sensitive information;
+- **Integrity** – Incomplete, inaccurate, or out-of-date information; and/or
+- **Availability** – Information cannot be accessed and used for its intended purposes, for a while or indefinitely.
 
 Those are the primary effects. However, incidents can also have secondary adverse effects such as a loss of or reduction in:
 
@@ -96,32 +137,7 @@ Ultimately, incidents destroy value. As a consequence of various incidents, info
 
 In the business context, it makes no sense to spend a fortune on reducing trivial incidents. Conversely, targeted investment to avoid, prevent, or contain the damaging effects of significant risks is entirely justified, even necessary. Therefore, we really need to analyse and quantify risk in order to invest appropriately, especially given limited/finite resources.
 
-## Risk Treatment Options
-Decide on risk treatments
-There are four generally-accepted ways of treating risks:
-1. Risk avoidance - stopping or not starting particularly risky activities at all. This is seldom appropriate because we normally only do things that have some
-purpose and value, so if we don’t do them to avoid the associated risk, we lose that value. However, we do sometimes have the option of not taking on
-significant risks e.g. by consciously and deliberately not releasing sensitive, valuable information to untrustworthy third parties, or pulling out of business
-arrangements that have become unduly threatening to our interests. 
-
-2. Risk reduction through security controls - most risks are ‘mitigated’ in some fashion using technological, procedural or physical controls (also known as
-measures, countermeasures, safeguards etc.). Most controls have a specific purpose (e.g. antivirus controls attempt to spot and block malware infections)
-while some others are general-purpose (e.g. resilience and backups). Multi-purpose controls (e.g. policies and procedures) can address several risks at
-once, and as such are often more valuable but less effective than single-purpose controls.
-
-3. Sharing risks with third parties - some risks can be shared by insurers, customers, owners, communities etc., who undertake to deal with them or accept
-the consequences (defined liabilities). Website privacy policies are an example: visitors who provide their contact details or other personal information
-through the website share some of the risk of privacy breaches with the SME on the understanding that specific privacy controls (as laid out in the policies)
-are in place. Insurance is another example: the insurer undertakes to compensate the insured if specific situations occur, provided the insured has taken
-‘reasonable’ (and often specified) steps to reduce the risk. Risks can be shared internally too. SMEs may opt to hold the IT department accountable for all
-IT risks rather than the individual departments - on the proviso that whoever is accountable has the ability to make key decisions about the risks, and has
-control over sufficient resources to.
-
-4. Risk acceptance - all the remaining risks are said to be accepted, whether deliberately and expressly, or not. We accept risks that were only partially
-treated by other means (e.g. where the controls are not entirely effective and reliable, or where situations we intended to avoid occur anyway, or where
-our attempted quantification was inaccurate, perhaps because things changed unexpectedly) plus risks that were untreated (e.g. risks we didn’t even
-identify as such, due to flaws in that part of the risk analysis process). 
-
+---
 
 ## Risk Treatment Options
 
