--- a/Academy/Compliance/ISO27001.md
+++ b/Academy/Compliance/ISO27001.md
@@ -1,6 +1,95 @@
 # Not The Hidden Wiki
 
-ISO27001 is about Risk in Information System.
+## Simplified ISO/IEC 27001 Implementation for SMEs
+
+The adaptive approach suggested in this guideline for SMEs is a streamlined version of the comprehensive ISO/IEC 27001 framework. 
+
+This simplified method consists of five main phases:
+
+### Phases Overview
+
+- **Phases 1 to 3:** These phases focus on preparation, gaining management support, and securing the necessary resources for phase 4.
+- **Phase 4:** The actual implementation of the Information Security Management System (ISMS).
+- **Phase 5:** Ongoing maintenance and continuous improvement.
+
+While phases 1 to 3 could technically be combined, we recommend treating them separately due to their importance and value.
+
+### Step-by-Step Guide
+
+#### Phase 1: Preparation
+
+- **Objective:** Understand the basics of information security and ISO/IEC 27001.
+- **Actions:** 
+  - Conduct preliminary research.
+  - Identify key stakeholders.
+  - Set initial goals for information security.
+
+#### Phase 2: Management Support
+
+- **Objective:** Garner the support of senior management.
+- **Actions:** 
+  - Present the benefits of ISO/IEC 27001 to management.
+  - Highlight potential risks and how the ISMS will mitigate them.
+  - Secure commitment from leadership.
+
+#### Phase 3: Resource Allocation
+
+- **Objective:** Secure the necessary resources for implementing the ISMS.
+- **Actions:** 
+  - Determine budget requirements.
+  - Identify and allocate human resources.
+  - Obtain any necessary tools and technologies.
+
+#### Phase 4: Implementation
+
+- **Objective:** Implement the ISMS.
+- **Actions:** 
+  - Define the scope of the ISMS.
+  - Conduct a risk assessment.
+  - Develop and implement security controls.
+  - Document policies and procedures.
+
+#### Phase 5: Continuous Improvement
+
+- **Objective:** Maintain and improve the ISMS over time.
+- **Actions:** 
+  - Regularly review and update security controls.
+  - Conduct internal audits.
+  - Implement corrective actions as needed.
+  - Ensure ongoing training and awareness programs.
+
+### Why Follow These Steps?
+
+Organisations that rush into phase 4 (typically in a hurry to become certified) often risk alienating senior management and fail to achieve the business value necessary to sustain the ISMS. Investing time and effort into phases 1 to 3 lays a solid foundation, ensuring a smoother and more successful implementation.
+
+
+## What Information Does the Organisation Need to Secure?
+
+To effectively implement ISO27001, it’s crucial to identify and understand what information your organisation seeks, wants, or needs to secure. This includes recognizing which information is important and valuable. Here are some examples of types of information that might be relevant:
+
+- **Blueprints and Designs:** Diagrams, schematics, and other design documents.
+- **Contracts and Business Correspondence:** Signed agreements, business letters, and communications.
+- **Invoices:** Both received and sent invoices.
+- **Trade Secrets and Intellectual Property:** Proprietary information, such as source code for a software development company.
+- **Personal Information:** Data pertaining to individuals, including employees and customers.
+- **Third-Party Information:** Information belonging to clients or partners that the organisation is responsible for safeguarding.
+- **Strategies and Plans:** Organisational strategies, plans, and intentions.
+- **Customer Lists:** Information on current and potential customers.
+- **Pricing Lists and Discounts:** Confidential pricing information and discount structures.
+
+### Appreciating Organisational Uniqueness
+
+Each organisation is unique, and so are its security challenges. Consider, for instance, two adjacent shoe shops on the same high street. Despite their similarities, they likely have different suppliers, products, pricing strategies, customer bases, priorities, owners, financing, employees, histories, and strategies. While both shops have valuable data related to shoes and are part of the same retail industry segment, a deeper look reveals significant differences.
+
+### Structuring Information Security Around Organisational Needs
+
+The information security framework should be tailored to the specific types of information your organisation handles. For example:
+
+- **Micro-Organisations Handling Rental Agreements:** Such businesses need to secure personal information from customers, as well as sensitive commercial and financial information related to contracts. Additionally, they must protect personal information about employees, business contacts, former and prospective customers, and commercially confidential information about their own business operations.
+
+### Broader Perspective on Information Security
+
+It's important to broaden the perspective to encompass all requirements for information security. This holistic view ensures that every aspect of the organisation’s information assets is considered and adequately protected. By understanding the specific needs and challenges of your organisation, you can implement a more effective and comprehensive ISO27001 information security management system.
 
 ## ISO - International Organisation for Standardization
 
@@ -15,22 +104,6 @@ ISO publishes numerous standards concerning information security, business conti
 - **ISO 22301:2019** - Similarly defines requirements for planning, implementing, maintaining, and continuously improving a Business Continuity Management System (BCMS). The purpose of a BCMS is to identify risks, prepare for emergencies, continue essential business activities if possible, and if not, recover as soon as possible from disruptive events to the organisation.
 
 - **ISO 31000:2018** - A framework of generic processes for managing all kinds of risks affecting your organisation systematically.
-
-## Reference Sources
-
-- [ISO/IEC 27000 - overview and glossary for the ISO27k](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
-- [ISO/IEC 27001 - formal information security management system specification](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
-- [ISO/IEC 27002 - a page explaining each of the 93 controls in ISO/IEC 27001 Annex A](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
-- [ISO/IEC 27003 - explains the formal requirements in ISO/IEC 27001 (2013 version – update in progress)](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
-- [ISO/IEC 27004 - how to design and use information security metrics](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
-- [ISO/IEC 27005 - techniques to analyse/assess & treat information risks](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
-- [Pragmatic ISMS implementation guide - explains ISO/IEC 27001 - free!](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
-- [ISO 31000 - risk management, in general](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
-- [ISO/TS 31050 - improving organisational resilience, extending ISO 31000](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
-- [NIST Cyber Security Framework small business quick start guide - free!](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
-- [ISO27k Forum, ISO27k FAQ & ISO27k Toolkit - free, all free!](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
-- [ISO 27001 ISMS Handbook: Implementing and auditing an Information Security Management System in small and medium-sized businesses by Cees van der Wens (paperback ~US$40 from Amazon)](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
-
 
 ---
 
@@ -119,3 +192,17 @@ There are four generally accepted ways of treating risks:
 ## Links Related to ISO 27001
 
 1. [ISO 27001 and Pentesting: What You Need to Know](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
+
+= [ISO/IEC 27000 - overview and glossary for the ISO27k](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
+- [ISO/IEC 27001 - formal information security management system specification](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
+- [ISO/IEC 27002 - a page explaining each of the 93 controls in ISO/IEC 27001 Annex A](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
+- [ISO/IEC 27003 - explains the formal requirements in ISO/IEC 27001 (2013 version – update in progress)](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
+- [ISO/IEC 27004 - how to design and use information security metrics](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
+- [ISO/IEC 27005 - techniques to analyse/assess & treat information risks](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
+- [Pragmatic ISMS implementation guide - explains ISO/IEC 27001 - free!](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
+- [ISO 31000 - risk management, in general](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
+- [ISO/TS 31050 - improving organisational resilience, extending ISO 31000](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
+- [NIST Cyber Security Framework small business quick start guide - free!](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
+- [ISO27k Forum, ISO27k FAQ & ISO27k Toolkit - free, all free!](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
+- [ISO 27001 ISMS Handbook: Implementing and auditing an Information Security Management System in small and medium-sized businesses by Cees van der Wens (paperback ~US$40 from Amazon)](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
+
